argocd/apps/kafka/resources/kafka-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ingress
  namespace: kafka
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kafka.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-kafka-external-bootstrap
                port:
                  number: 9094
